--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,6 +2,8 @@
 <div class="content">
 <div class="columns is-centered">
     <div class="column is-half ">
+        <h1 class="title is-1">{{ .Title }}</h1>
+        <p class="subtitle is-6 has-text-grey-light">{{ dateFormat "Monday, Jan 2, 2006" .Date }}</p>
         {{ .Content }}
     </div>
 </div>
