--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,18 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" {{ printf "href=%q" "/css/bulma.css" | safeHTMLAttr }} type="text/css">
-    <title>{{.Title}} | {{ .Site.Title }}</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
+    <title>{{.Title}} - {{ .Site.Title }}</title>
 </head>
 
 <body>
-    {{ partial "hero" . }}
+    <div class="main">
+        {{ partial "navbar" . }}
 
-    <section class="section">
-        <div class="container">
-            {{ block "content" . }}
-            {{ end }}
-        </div>
-    </section>
+        <section class="section">
+            <div class="container">
+                {{ block "content" . }} {{ end }}
+            </div>
+        </section>
+
+        
+    </div>
+    {{ partial "footer" . }}
 </body>
 
 </html>
