--- a/static/css/bulma.css
+++ b/static/css/bulma.css
@@ -266,6 +266,7 @@ textarea {
 
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 
 *, *::before, *::after {
@@ -339,6 +340,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
+  height: 100%;
 }
 
 a {
@@ -4342,6 +4344,11 @@ a.box:active {
 .icon.is-large {
   height: 3rem;
   width: 3rem;
+}
+
+.icon.is-xlarge {
+  height: 4rem;
+  width: 4rem;
 }
 
 .image {
@@ -10282,7 +10289,21 @@ label.panel-block:hover {
 }
 
 .footer {
-  background-color: #fafafa;
-  padding: 3rem 1.5rem 6rem;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  background-color: #b5b5b5;
+  padding: 1.5rem 1.5rem 1.5rem;
+  color: white;
 }
+
 /*# sourceMappingURL=bulma.css.map */
+
+.main {
+  min-height: 100%;
+  position: relative;
+}
+
+.header.has-shadow {
+  box-shadow: 0 2px 0 0 whitesmoke;
+}
