--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,14 @@
 <footer class="footer">
     <div class="container">
         <div class="content has-text-centered">
-            <p>
-                © 2018 Tommy Tran
-            </p>
+            <div class="columns">
+                <div class="column">
+                        © 2018 All rights reserved
+                </div>
+                <div class="column">
+                        Background by <a href="https://svgbackgrounds.com/">SVG Backgrounds</a>
+                </div>
+            </div>
         </div>
     </div>
 </footer>
