--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,31 +1,44 @@
-<div class="header has-shadow">
+<div class="header">
     <div class="container">
-        <div class="columns is-multiline">
-            <div class="column has-text-centered-mobile">
-                <h1 class="title" style="position: relative; top: 50%; transform: translateY(-50%);">
-                    <a class="has-text-primary" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
-                </h1>
+        <div class="columns is-multiline is-marginless">
+            <div class="column has-text-centered-mobile is-paddingless">
+                <div class="header-title">
+                    <a class="" href="{{ .Site.BaseURL }}">{{ upper .Site.Title }}</a>
+                </div>
             </div>
-            <div class="column is-narrow">
+            <div class="column is-narrow" style="padding: 0">
                 <div class="level is-mobile">
                     <div class="level-item">
-                        <a class="" href="https://gitlab.com/zhanj" target="_blank">
-                            <span class="icon is-xlarge" style="color:orange">
-                                <i class="fab fa-gitlab fa-3x"></i>
+                        <a class="" href="https://www.youtube.com/channel/UCfQfs3D8nTR2-8iBE3GhcSA" target="_blank">
+                            <span class="icon is-xlarge" style="color: #c13f21">
+                                <i class="fab fa-youtube fa-2x"></i>
                             </span>
                         </a>
                     </div>
                     <div class="level-item">
-                        <a class="" href="https://www.youtube.com/channel/UCfQfs3D8nTR2-8iBE3GhcSA" target="_blank">
-                            <span class="icon is-xlarge" style="color:red">
-                                <i class="fab fa-youtube fa-3x"></i>
+                        <a class="" href="https://gitlab.com/zhanj" target="_blank">
+                            <span class="icon is-xlarge" style="color: #dda032">
+                                <i class="fab fa-gitlab fa-2x"></i>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="level-item">
+                        <a class="" href="https://www.raywenderlich.com/u/tommytran" target="_blank">
+                            <span class="icon is-xlarge">
+                                <svg viewBox="-25 -31 100 100">
+                                    <g fill="#00753F" fill-rule="nonzero">
+                                        <g>
+                                            <path d="M0,50 L50,50 L50,7.559375 L32.6921875,37.5523437 L25.815625,25.3421875 L17.9921875,37.7898438 C17.9921875,37.7898438 12.7757813,25.3421875 11.175,21.5484375 C13.13125,20.1257812 22.1414063,14.909375 22.1414063,8.03359375 C22.1414063,1.15773437 6.75703125,0 0,0 L0,50 Z"></path>
+                                        </g>
+                                    </g>
+                                </svg>
                             </span>
                         </a>
                     </div>
                     <div class="level-item">
                         <a class="" href="mailto:tommy.zhanj@gmail.com" target="_blank">
-                            <span class="icon is-xlarge" style="color:grey">
-                                <i class="fas fa-envelope fa-3x"></i>
+                            <span class="icon is-xlarge" style="color: #7a756f">
+                                <i class="fas fa-envelope fa-2x"></i>
                             </span>
                         </a>
                     </div>
